# vibe

./: .gitignore  .goreleaser.yml  LICENSE  README.md  Vibefile  go.mod  go.sum  install.sh  main.go
.github/workflows/: ci.yml  release.yml
.vibe/compiled/: build.sh  deploy-local.sh  test.sh  tidy.sh
cmd/: check.go  eject.go  eject_test.go  helpers.go  init.go  init_test.go  list.go  root.go  run.go  status.go
compiled/: compiled.go  compiled_test.go
config/: keys.go  keys_test.go  project.go  project_test.go
context/: collector.go  collector_test.go
detect/: detect.go  helpers.go  helpers_test.go  project.go  template.go  template_test.go
detect/cloudflare/: addon.go
detect/docker/: addon.go
detect/fly/: addon.go
detect/golang/: detect.go  template.go
detect/helm/: addon.go
detect/makefile/: addon.go
detect/nextjs/: detect.go  template.go
detect/python/: detect.go  detect_test.go  template.go
detect/vercel/: addon.go
executor/: shell.go  shell_test.go
llm/: client.go  client_test.go  prompt.go
parser/: parser.go  parser_test.go  types.go
require/: require.go  require_test.go
resolver/: graph.go  graph_test.go
scripts/: install.sh
skill/: skill.go  skill_test.go
testdata/python-demo/: Vibefile  pyproject.toml
testdata/python-demo/.vibe/compiled/: run.sh
testdata/python-demo/src/demo/: __init__.py  main.py  utils.py
testdata/python-demo/tests/: conftest.py  test_utils.py
testdata/skill-test/: Vibefile  coverage.out  go.mod  main.go  main_test.go  skill-test
testdata/skill-test/.vibe/compiled/: test.sh
ui/: ui.go
(+1 files in other folders)
