[project]
name = "demo"
version = "0.1.0"
description = "A small demo Python project"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.9",
]

[project.scripts]
demo = "demo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["demo"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
